security_group.tf
resource "aws_security_group" "ssh" {
    vpc_id = aws_vpc.uli_vpc.id
    name   = "ssh"
    egress {
        from_port  = 0
        to_port    = 0
        protocol   = "-1"
        cidr_blocks = ["0.0.0.0/0"]

    }

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks  = ["0.0.0.0/0"]
    }
    
    tags = {
        Name = "ssh"
    }
}
